# charter-compiler

./: .gitignore  AGENT_DEV_LOG.md  IMPLEMENTATION_TASKS.md  LAMBDA_IMPLEMENTATION_SUMMARY.md  LAMBDA_LABS_SETUP.md  LICENSE  QUICKSTART_LAMBDA.md  README.md  TECHNICAL_SPEC.md  docker-compose.yml  pyproject.toml
charter_compiler/: compiler.py  models.py
charter_compiler/analysis/: loop_optimizer.py  memoization.py  pattern_detector.py  prefix_analyzer.py
charter_compiler/config/: priority_mapper.py  trtllm_config.py
charter_compiler/configs/: benchmarks.yaml  default.yaml
charter_compiler/dag/: builder.py
charter_compiler/executor/: cache_manager.py  orchestrator.py  scheduler.py  triton_client.py  triton_client_production.py
charter_compiler/monitor/: metrics.py
charter_compiler/parser/: ast_parser.py
configs/: lambda_labs.yaml
examples/agents/: delta_processor.py  document_processor.py
model_repository/: MODEL_README.md
scripts/: benchmark_lambda.py  deploy.sh  lambda_server_setup.sh  lambda_tunnel.sh  run_lambda_tests.py
tests/benchmarks/: harness.py
tests/integration/: test_e2e.py
tests/unit/: test_dag.py  test_models.py
